--- a/_pages/teach.html
+++ b/_pages/teach.html
@@ -379,33 +379,37 @@ regresia 2</a></li>
 <div id="courses" class="section level1">
 <h1>Courses</h1>
 <ul>
-<li>Econometrics (Fall 2021-2024, PhD course, MUNI)</li>
-<li>Optimisation and Microeconomic Theory (Fall 2014, 2018-2024, Master,
-NHH)</li>
-<li>Regression Analysis 1 (Spring 2016-2021, 2023-2024 in Slovak,
-UMB)</li>
-<li>Regression Analysis 2 (Fall 2016-2023 in Slovak, UMB)</li>
-<li>Probability Theory 1 (Spring 2014, 2016, 2018-2023, in Slovak,
-UMB)</li>
-<li>Stochastic Processes (Fall 2015-2018, 2020-2024, in Slovak,
-UMB)</li>
-<li>Probability and Statistics 1 (Spring 2022-2025 in Slovak, UMB)</li>
-<li>Probability and Statistics 2 (Fall 2021-2023 in Slovak, UMB)</li>
-<li>Computation and Simulation in R 3 (Spring 2018-2021, 2023, in
-Slovak, UMB)</li>
-<li>Introduction to Numerical Methods using MATLAB (Spring 2015 and
-2017, intensive PhD course, NHH)</li>
-<li>Financial Mathematics 2 (Fall 2015, in Slovak, UMB)</li>
-<li>Diploma Seminar (Spring 2014, in Slovak, UMB)</li>
-<li>Refresher Course in Probability and Statistics (Fall 2013, intensive
-PhD course, NHH)</li>
-<li>Refresher Course in Mathematics (Fall 2010-2012, 2014, intensive PhD
-course, NHH)</li>
-<li>[TA] Refresher Course in Probability and Statistics (Fall 2010-2012,
-intensive PhD course, NHH)</li>
-<li>[TA] Microeconomic Theory (Fall 2011-2012, PhD course, NHH)</li>
-<li>[TA] International Macroeconomics (Spring 2010, Master, NHH)</li>
-<li>[TA] Econometrics (Spring 2009, Master, NHH)</li>
+<li><p>Econometrics (Fall 2021-2025, PhD course, MUNI)</p></li>
+<li><p>Optimisation and Microeconomic Theory (Fall 2014, 2018-2025,
+Master, NHH)</p></li>
+<li><p>Regression Analysis 1 (Spring 2016-2021, 2023-2025 in Slovak,
+UMB)</p></li>
+<li><p>Stochastic Processes (Fall 2015-2018, 2020-2025 in Slovak,
+UMB)</p></li>
+<li><p>Probability and Statistics 2 (Fall 2021-2025 in Slovak,
+UMB)</p></li>
+<li><p>Regression Analysis 2 (Fall 2016-2023 in Slovak, UMB)</p></li>
+<li><p>Probability Theory 1 (Spring 2014, 2016, 2018-2023, in Slovak,
+UMB)</p></li>
+<li><p>Probability and Statistics 1 (Spring 2022-2025 in Slovak,
+UMB)</p></li>
+<li><p>Computation and Simulation in R 3 (Spring 2018-2021, 2023, in
+Slovak, UMB)</p></li>
+<li><p>Introduction to Numerical Methods using MATLAB (Spring 2015 and
+2017, intensive PhD course, NHH)</p></li>
+<li><p>Financial Mathematics 2 (Fall 2015, in Slovak, UMB)</p></li>
+<li><p>Diploma Seminar (Spring 2014, in Slovak, UMB)</p></li>
+<li><p>Refresher Course in Probability and Statistics (Fall 2013,
+intensive PhD course, NHH)</p></li>
+<li><p>Refresher Course in Mathematics (Fall 2010-2012, 2014, intensive
+PhD course, NHH)</p></li>
+<li><p>[TA] Refresher Course in Probability and Statistics (Fall
+2010-2012, intensive PhD course, NHH)</p></li>
+<li><p>[TA] Microeconomic Theory (Fall 2011-2012, PhD course,
+NHH)</p></li>
+<li><p>[TA] International Macroeconomics (Spring 2010, Master,
+NHH)</p></li>
+<li><p>[TA] Econometrics (Spring 2009, Master, NHH)</p></li>
 </ul>
 </div>
 
