--- a/_pages/presentations.html
+++ b/_pages/presentations.html
@@ -356,7 +356,8 @@ display: none;
 <h1>Presentations</h1>
 <ul>
 <li>2025: JRC - European Commision (Ispra), VŠE (Prague), MIER in
-Smolenice, University of St. Gallen, scheduled: SEAM Nitra</li>
+Smolenice, University of St. Gallen, <a href="http://lukaslaffers.github.io/files/presentation_LL_SEAM.pdf">SEAM
+Nitra</a></li>
 <li>2024: SEAM Bratislava, <a href="http://lukaslaffers.github.io/files/EALE_Laffers.pdf">EALE
 Bergen</a>, COMPIE Amsterdam, <a href="http://lukaslaffers.github.io/files/LL_probastat3.pdf">PROBASTAT
 Smolenice</a>, <a href="http://lukaslaffers.github.io/files/LL_main.pdf">MUNI Brno
