--- a/_pages/research.html
+++ b/_pages/research.html
@@ -540,8 +540,10 @@ of Operations Research, Journal of Environmental Economics and
 Management, Research in Statistics, Journal of Statistical Computation
 and Simulation, Journal of Data Science, Applied Economics, Ekonomický
 Časopis</li>
-<li>Social Policy Insitute, Institute for Healthcare Analyses, VEGA
-grant scheme, Riksbankens jubileumsfond</li>
+<li>Social Policy Institute (SVK), Institute for Healthcare Analyses
+(SVK), VEGA grant scheme (SVK), Luxembourg National Research Fund,
+Riksbankens jubileumsfond</li>
+<li>PhD committee: CERGE-EI, Comenius University</li>
 </ul>
 </div>
 
