--- a/_pages/linreg1.html
+++ b/_pages/linreg1.html
@@ -11,7 +11,7 @@
 
 
 
-<title>pas1</title>
+<title>linreg1</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -352,20 +352,23 @@ display: none;
 </div>
 
 
-<div id="pravdepodobnosť-a-štatistika-1" class="section level1">
-<h1>Pravdepodobnosť a štatistika 1</h1>
-<ul>
-<li><a href="http://lukaslaffers.github.io/files/MAR1_poznamkyMain.pdf">Lineárna
-regresia 1</a></li>
-<li><a href="http://lukaslaffers.github.io/files/MAR2_all.pdf">Lineárna
-regresia 2</a></li>
-</ul>
+<div id="o-tomto-kurze" class="section level1">
+<h1>O tomto kurze</h1>
+<p>Tento kurz je o spoznaní veľmi užitočného nástroja, ktorým je
+lineárna regresia. Celý semester sa podrobne budeme venovať rôznym
+rozšíreniam a uvidíme veľké množstvo príkladov a datasetov.</p>
+<p>Tento kurz je veľmi veľkej miery inšpirovaný knihami Juliana
+Farawaya. Nedávno vyšla tretia edícia <a href="https://julianfaraway.github.io/faraway/LMR/">Linear models with
+R</a>. Táto kniha je unikátnym mixom téorie, reálnych príkladov a ich
+implementácie v R.</p>
+<p>Tu je môj starší preklad “obohatený” o moje rôzne vhľady a popletené
+fantázie. <a href="http://lukaslaffers.github.io/files/MAR1_poznamkyMain.pdf">Lineárna
+regresia 1</a></p>
 </div>
-<div id="courses" class="section level1">
-<h1>Courses</h1>
+<div id="cvičenie" class="section level1">
+<h1>Cvičenie</h1>
 <ul>
-<li>skuska</li>
-<li>skuska2</li>
+<li>fdfs</li>
 </ul>
 </div>
 
