--- a/_pages/linreg1.html
+++ b/_pages/linreg1.html
@@ -357,17 +357,17 @@ display: none;
 <p>Tento kurz je o spoznaní veľmi užitočného nástroja, ktorým je
 lineárna regresia. Celý semester sa podrobne budeme venovať rôznym
 rozšíreniam a uvidíme veľké množstvo príkladov a datasetov.</p>
-<p>Tento kurz je veľmi veľkej miery inšpirovaný knihami Juliana
-Farawaya, ktorému nedávno vyšla tretia edícia <a href="https://julianfaraway.github.io/faraway/LMR/">Linear models with
+<p>Kurz je veľmi veľkej miery inšpirovaný knihami Juliana Farawaya,
+ktorému nedávno vyšla tretia edícia <a href="https://julianfaraway.github.io/faraway/LMR/">Linear models with
 R</a>. Táto kniha je unikátnym mixom téorie, reálnych príkladov a ich
 implementácie v R.</p>
-<p>Tu je môj starší preklad “obohatený” o moje rôzne vhľady a popletené
-fantázie. <a href="http://lukaslaffers.github.io/files/MAR1_poznamkyMain.pdf">PDF
-text</a>. Budem Vám samozrejme vďačný, za akúkoľvek spätnú väzbu.
-Odporúčam Vám zaobstarať si fyzickú kópiu knihy, druhé vydanie
+<p>Tu je <a href="http://lukaslaffers.github.io/files/MAR1_poznamkyMain.pdf">môj
+starší a skomprimovaný preklad “obohatený” o moje rôzne vhľady a
+popletené fantázie</a>. Budem Vám samozrejme vďačný, za akúkoľvek spätnú
+väzbu. Odporúčam Vám zaobstarať si aj fyzickú kópiu knihy, druhé vydanie
 postačí.</p>
-<p>Táto webstránka <a href="http://lukaslaffers.github.io/linreg1" class="uri">http://lukaslaffers.github.io/linreg1</a> bude obsahovať
-prednáškové poznámky a dodatočné odkazy na zaujímavé čítania.</p>
+<p>Webstránka <a href="http://lukaslaffers.github.io/linreg1" class="uri">http://lukaslaffers.github.io/linreg1</a> bude obsahovať
+všetky relevantné informácie týkajúce sa tohoto kurzu.</p>
 <div id="rozvrh" class="section level3">
 <h3>Rozvrh</h3>
 <p>13 týždňov (16. september – 10. december, kalendárne týždne
@@ -387,8 +387,8 @@ Prednáška/Cvičenie</li>
 základné pojmy ako je náhodná premenná, stredná hodnota, variancia,
 korelácia alebo dôležité vety ako Zákon veľkých čísel alebo Centrálna
 limita nájdete tu <a href="https://lukaslaffers.github.io/pas1/" class="uri">https://lukaslaffers.github.io/pas1/</a>.</p>
-<p>Predpokladá sa akási familiarita s výpočtovým prostredím R.
-Nadväzujúci praktický kurz so základným balíkom nástrojov je tu <a href="https://lukaslaffers.github.io/pas2/" class="uri">https://lukaslaffers.github.io/pas2/</a></p>
+<p>Predpokladá sa akási familiarita s výpočtovým prostredím R. Praktický
+kurz so základným štatistickým balíkom nástrojov je tu <a href="https://lukaslaffers.github.io/pas2/" class="uri">https://lukaslaffers.github.io/pas2/</a>.</p>
 <p>Taktiež je užitočná znalosť lineárnej algebry, pojmy ako vektor,
 matica, hodnosť matice, vlastné čísla a vlastné vektory by nemali byť
 cudzie.</p>
