--- a/_pages/linreg1.html
+++ b/_pages/linreg1.html
@@ -355,14 +355,16 @@ display: none;
 <div id="lineárna-regresia-1" class="section level1">
 <h1>Lineárna regresia 1</h1>
 <p>Tento kurz je o spoznaní veľmi užitočného nástroja, ktorým je
-lineárna regresia. Celý semester sa podrobne budeme venovať rôznym
-rozšíreniam a uvidíme veľké množstvo príkladov a datasetov.</p>
+lineárna regresia. Ide o základný nástroj, ktorý nám pomáha porozumieť
+vzťahom medzi rôznymi premennými ako aj predikovať. Celý semester sa
+budeme tiež venovať rôznym rozšíreniam a uvidíme veľké množstvo
+príkladov a datasetov.</p>
 <p>Kurz je veľmi veľkej miery inšpirovaný knihami Juliana Farawaya,
-ktorému nedávno vyšla tretia edícia <a href="https://julianfaraway.github.io/faraway/LMR/">Linear models with
-R</a>. Táto kniha je unikátnym mixom téorie, reálnych príkladov a ich
-implementácie v R.</p>
+ktorému nedávno vyšla tretia edícia <a href="https://julianfaraway.github.io/faraway/LMR/">Linear models with R
+(LMwR)</a>. Táto kniha je unikátnym mixom téorie, reálnych príkladov a
+ich implementácie v R.</p>
 <p>Tu je <a href="http://lukaslaffers.github.io/files/MAR1_poznamkyMain.pdf">môj
-starší a skomprimovaný preklad “obohatený” o moje rôzne vhľady a
+starší a skomprimovaný prehľad LMwR “obohatený” o moje rôzne vhľady a
 popletené fantázie</a>. Budem Vám samozrejme vďačný, za akúkoľvek spätnú
 väzbu. Odporúčam Vám zaobstarať si aj fyzickú kópiu knihy, druhé vydanie
 postačí.</p>
@@ -488,6 +490,13 @@ zhrnutie.</p></li>
 <div id="konzultačné-hodiny" class="section level3">
 <h3>Konzultačné hodiny</h3>
 <p>Podľa dohody. Ste srdečne vítaní!</p>
+</div>
+<div id="hodnotenie" class="section level3">
+<h3>Hodnotenie</h3>
+<ul>
+<li><strong>30 %</strong> – priebežné hodnotenie</li>
+<li><strong>70 %</strong> – záverečná skúška</li>
+</ul>
 </div>
 </div>
 
