--- a/_pages/stoch.html
+++ b/_pages/stoch.html
@@ -354,9 +354,15 @@ display: none;
 
 <div id="stochastické-procesy" class="section level1">
 <h1>Stochastické procesy</h1>
-<p>Predmet je určený pre <strong>študentov magisterského
-programu</strong><br />
-<strong>Matematika analýzy dát a financií</strong> (zimný semester).</p>
+<p>Kurz nadväzuje na predmet <strong>Teória pravdepodobnosti</strong> a
+poskytuje základ vybraných častí matematickej teórie stochastických
+procesov s aplikáciami v <strong>štatistike, financiách a
+poisťovníctve</strong>.</p>
+<p>Osvojenie si týchto tém je dôležitou prípravou na pokročilejšie kurzy
+finančnej a poistnej matematiky.</p>
+<p>Cvičenia sa zameriavajú najmä na porozumenie rôznym konceptom a
+vzťahom medzi nimi. Niekoľko úloh bude výpočtových s možnosťou použiť
+Váš obľúbený softvér (R).</p>
 <p>Webstránka <a href="http://lukaslaffers.github.io/stoch" class="uri">http://lukaslaffers.github.io/stoch</a> bude obsahovať
 všetky relevantné informácie týkajúce sa tohoto kurzu.</p>
 <div id="rozvrh" class="section level3">
@@ -366,65 +372,51 @@ všetky relevantné informácie týkajúce sa tohoto kurzu.</p>
 <li><strong>Streda 08:15 – 11:20</strong> F236 – Prednáška/Cvičenie</li>
 </ul>
 </div>
-<div id="všeobecné-informácie" class="section level3">
-<h3>Všeobecné informácie</h3>
-<p>Kurz nadväzuje na predmet <strong>Teória pravdepodobnosti</strong> a
-poskytuje základ vybraných častí matematickej teórie stochastických
-procesov s aplikáciami v <strong>štatistike, financiách a
-poisťovníctve</strong>.</p>
-<p>Osvojenie si týchto tém je dôležitou prípravou na pokročilejšie
-kurzy<br />
-finančnej a aktuárskej matematiky.</p>
-<p>Cvičenia sa zameriavajú najmä na porozumenie rôznym konceptom a<br />
-vzťahom medzi nimi; niekoľko úloh bude výpočtových<br />
-s možnosťou použiť Váš obľúbený softvér (R).</p>
-</div>
 <div id="odporúčaná-literatúra" class="section level3">
 <h3>Odporúčaná literatúra</h3>
 <p><strong>Povinná</strong><br />
-- <strong>M</strong> Mikosh, T.: <em>Non-Life Insurance Mathematics: An
-Introduction with the Poisson Process</em>. Springer, 2009.<br />
-- <strong>R</strong> Rosenthal, J. S.: <em>A First Look at Rigorous
-Probability Theory</em>. World Scientific, 2006.<br />
-- <strong>ER</strong> Evans, M. J., Rosenthal, J. S.: <em>Probability
-and Statistics: The Science of Uncertainty</em>. W. H. Freeman,
-2003.</p>
+- <strong>[M]</strong> Mikosh, T.: <em>Non-Life Insurance Mathematics:
+An Introduction with the Poisson Process</em>. Springer, 2009.<br />
+- <strong>[R]</strong> Rosenthal, J. S.: <em>A First Look at Rigorous
+Probability Theory</em>. World Scientific, 2006.</p>
 <p><strong>Doplnková</strong><br />
-- <strong>K</strong> Korn, R., Korn, E., Kroisandt, G.: <em>Monte Carlo
+- <strong>[ER]</strong> Evans, M. J., Rosenthal, J. S.: <em>Probability
+and Statistics: The Science of Uncertainty</em>. W. H. Freeman, 2003. -
+<strong>[K]</strong> Korn, R., Korn, E., Kroisandt, G.: <em>Monte Carlo
 Methods and Models in Finance and Insurance</em>. CRC Press, 2010.<br />
-- <strong>JKB</strong> Janková, K., Kilianová, S., Brunovský, P., Bokes,
-P.: <em>Markovove reťazce a ich aplikácie</em>. Epos, 2015.<br />
-- <strong>B</strong> Billingsley, P.: <em>Probability and Measure</em>.
-Wiley, 2008.</p>
+- <strong>[JKB]</strong> Janková, K., Kilianová, S., Brunovský, P.,
+Bokes, P.: <em>Markovove reťazce a ich aplikácie</em>. Epos, 2015.<br />
+- <strong>[B]</strong> Billingsley, P.: <em>Probability and
+Measure</em>. Wiley, 2008.</p>
 </div>
 <div id="osnova-kurzu-referencie-v-zátvorkách" class="section level3">
 <h3>Osnova kurzu <em>(referencie v zátvorkách)</em></h3>
 <ul>
 <li>Rýchly prehľad pravdepodobnosti [R: ch1–7]<br />
 </li>
-<li>Stochastické procesy – konštrukcia jednoduchého stochastického
-procesu [R: ch10]<br />
+<li><strong>Stochastické procesy</strong> – konštrukcia jednoduchého
+stochastického procesu [R: ch10]<br />
 </li>
-<li>Diskrétne Markovove reťazce – definícia, stavový priestor, príklady
-(matica kreditného skóre), rekurentné a tranzientné reťazce,
-ireducibilita, stacionárne rozdelenia a konvergencia, periodické
-reťazce, MCMC algoritmus (Metropolis-Hastings, Gibbs), príklad Google
-PageRank [R: ch8, K, ER: ch11]<br />
+<li><strong>Diskrétne Markovove reťazce</strong> – definícia, stavový
+priestor, príklady (matica kreditného skóre), rekurentné a tranzientné
+reťazce, ireducibilita, stacionárne rozdelenia a konvergencia,
+periodické reťazce, MCMC algoritmus (Metropolis-Hastings, Gibbs),
+príklad Google PageRank [R: ch8, K, ER: ch11]<br />
 </li>
-<li>Poissonov proces – Lundbergov model, Bernoulliho proces, limitná
-definícia, vlastnosti, homogénny a nehomogénny PP, alternatívne
-definície, paradox inšpekcie, rozdelenie medzičasov, usporiadané
-štatistiky, príklad dánskych požiarov [M: ch1–2]<br />
+<li><strong>Poissonov proces</strong> – Lundbergov model, Bernoulliho
+proces, limitná definícia, vlastnosti, homogénny a nehomogénny PP,
+alternatívne definície, paradox inšpekcie, rozdelenie medzičasov,
+usporiadané štatistiky, príklad dánskych požiarov [M: ch1–2]<br />
 </li>
-<li>Martingaly – podmienené očakávanie, martingal, sub/supermartingal,
-zastavovací čas, vetu o voliteľnom výbere, príklady, Waldova veta, veta
-o konvergencii martingalu, Upcrossing lemma, maximálna nerovnosť,
-centrálna limitná veta (bez dôkazu) [R: ch14]<br />
+<li><strong>Martingaly</strong> – podmienené očakávanie, martingal,
+sub/supermartingal, zastavovací čas, vetu o voliteľnom výbere, príklady,
+Waldova veta, veta o konvergencii martingalu, Upcrossing lemma,
+maximálna nerovnosť, centrálna limitná veta (bez dôkazu) [R: ch14]<br />
 </li>
-<li>Všeobecné stochastické procesy – Kolmogorovova veta o existencii,
-Markovove reťazce na všeobecnom stavovom priestore, stacionárne
-rozdelenia, kontinuálny čas, generátor, reverzibilita, Brownov pohyb –
-definícia, vlastnosti, existencia [R: ch15]</li>
+<li><strong>Všeobecné stochastické procesy</strong> – Kolmogorovova veta
+o existencii, Markovove reťazce na všeobecnom stavovom priestore,
+stacionárne rozdelenia, kontinuálny čas, generátor, reverzibilita,
+Brownov pohyb – definícia, vlastnosti, existencia [R: ch15]</li>
 </ul>
 <p>Cvičenia vychádzajú najmä z úloh na konci kapitol v [R].</p>
 </div>
@@ -433,6 +425,13 @@ definícia, vlastnosti, existencia [R: ch15]</li>
 <p>Podľa dohody. Ste srdečne vítaní!</p>
 </div>
 <div id="hodnotenie" class="section level3">
+<h3>Hodnotenie</h3>
+<ul>
+<li><strong>30 %</strong> – priebežné hodnotenie</li>
+<li><strong>70 %</strong> – záverečná skúška</li>
+</ul>
+</div>
+<div id="hodnotenie-1" class="section level3">
 <h3>Hodnotenie</h3>
 <ul>
 <li><strong>30 %</strong> – priebežné hodnotenie</li>
