--- a/_pages/linreg1.html
+++ b/_pages/linreg1.html
@@ -370,6 +370,11 @@ väzbu. Odporúčam Vám zaobstarať si aj fyzickú kópiu knihy, druhé vydanie
 postačí.</p>
 <p>Webstránka <a href="http://lukaslaffers.github.io/linreg1" class="uri">http://lukaslaffers.github.io/linreg1</a> bude obsahovať
 všetky relevantné informácie týkajúce sa tohoto kurzu.</p>
+<div id="súbory" class="section level3">
+<h3>Súbory</h3>
+<p>R súbory: <a href="https://www.dropbox.com/scl/fi/vddxdof05wq9pl5flpecu/1.R?rlkey=sc7gcvxxfzmaxwjredlpypmo3&amp;dl=0">1</a></p>
+<p>Cvičenia: <a href="https://www.dropbox.com/scl/fi/dnfbpb2d3aufv7s6wq4a5/Ex1_Tutorial-Vizualizacia.R?rlkey=6n9ecepa0b0cn0u1jorwuwqwj&amp;dl=0">1</a></p>
+</div>
 <div id="rozvrh" class="section level3">
 <h3>Rozvrh</h3>
 <p>13 týždňov (16. september – 10. december, kalendárne týždne
