--- a/_pages/linreg1.html
+++ b/_pages/linreg1.html
@@ -379,13 +379,25 @@ všetky relevantné informácie týkajúce sa tohoto kurzu.</p>
 <h3>Rozvrh</h3>
 <p>13 týždňov (16. september – 10. december, kalendárne týždne
 38–50)</p>
-<p>(Rozvrh sa možno zmení tak, aby nám vyhovoval.)</p>
 <ul>
-<li><strong>Utorok</strong> 08:15 – 09:45   <em>F237</em>  
+<li><strong>Utorok</strong> 13:50 – 15:25   <em>F237</em>  
 Cvičenia<br />
 </li>
 <li><strong>Streda</strong> 15:25 – 17:40   <em>F237</em>  
 Prednáška/Cvičenie</li>
+</ul>
+<p><strong>Zoom</strong> (kalendárne týždne 42–43):</p>
+<ul>
+<li>14.10.2025 13:50 – 15:25</li>
+<li>15.10.2025 15:25 – 17:40</li>
+<li>21.10.2025 13:50 – 15:25</li>
+<li>22.10.2025 15:25 – 17:40</li>
+</ul>
+<p>Prihlasovacie info:</p>
+<ul>
+<li><a href="https://us02web.zoom.us/j/3759103037?pwd=cUpaUUovZTI1ZWhVdy9NczJhUzNCUT09" class="uri">https://us02web.zoom.us/j/3759103037?pwd=cUpaUUovZTI1ZWhVdy9NczJhUzNCUT09</a></li>
+<li>Meeting ID: 375 910 3037</li>
+<li>Passcode: VEX6Mm</li>
 </ul>
 </div>
 <div id="predpokladané-vstupné-znalosti" class="section level3">
