--- a/_pages/stoch.html
+++ b/_pages/stoch.html
@@ -367,9 +367,20 @@ Váš obľúbený softvér (R).</p>
 všetky relevantné informácie týkajúce sa tohoto kurzu.</p>
 <div id="rozvrh" class="section level3">
 <h3>Rozvrh</h3>
-<p>13 týždňov  <em>(16. september – 10. december, týždne 38–50)</em></p>
+<p>13 týždňov   (16. september – 10. december, týždne 38–50)</p>
 <ul>
 <li><strong>Streda 08:15 – 11:20</strong> F236 – Prednáška/Cvičenie</li>
+</ul>
+<p><strong>Zoom</strong> (kalendárne týždne 42–43):</p>
+<ul>
+<li>15.10.2025 08:15 – 11:20</li>
+<li>22.10.2025 08:15 – 11:20</li>
+</ul>
+<p>Prihlasovacie info:</p>
+<ul>
+<li><a href="https://us02web.zoom.us/j/3759103037?pwd=cUpaUUovZTI1ZWhVdy9NczJhUzNCUT09" class="uri">https://us02web.zoom.us/j/3759103037?pwd=cUpaUUovZTI1ZWhVdy9NczJhUzNCUT09</a></li>
+<li>Meeting ID: 375 910 3037</li>
+<li>Passcode: VEX6Mm</li>
 </ul>
 </div>
 <div id="odporúčaná-literatúra" class="section level3">
@@ -425,13 +436,6 @@ Brownov pohyb – definícia, vlastnosti, existencia [R: ch15]</li>
 <p>Podľa dohody. Ste srdečne vítaní!</p>
 </div>
 <div id="hodnotenie" class="section level3">
-<h3>Hodnotenie</h3>
-<ul>
-<li><strong>30 %</strong> – priebežné hodnotenie</li>
-<li><strong>70 %</strong> – záverečná skúška</li>
-</ul>
-</div>
-<div id="hodnotenie-1" class="section level3">
 <h3>Hodnotenie</h3>
 <ul>
 <li><strong>30 %</strong> – priebežné hodnotenie</li>
