--- a/_pages/stoch.html
+++ b/_pages/stoch.html
@@ -383,6 +383,26 @@ všetky relevantné informácie týkajúce sa tohoto kurzu.</p>
 <li>Passcode: VEX6Mm</li>
 </ul>
 </div>
+<div id="poznámky" class="section level3">
+<h3>Poznámky</h3>
+<ul>
+<li><p><a href="https://www.dropbox.com/scl/fi/inf0nn8ex8ar7n1qrnzqf/7-kapitola-Rosenthal-cast1.pdf?rlkey=jkuiosccow0y5x1ml36tw6ytf&amp;dl=0">Stochastické
+procesy</a></p></li>
+<li><p><a href="https://www.dropbox.com/scl/fi/2lmzq14j3mcwyi23a1oq4/8-kapitola-Rosenthal.pdf?rlkey=miyj2qwyjm0cag1usl6f6s5g7&amp;dl=0">Diskrétne
+Markovove reťazce</a> <a href="https://www.dropbox.com/scl/fi/49jkj1v4m1z3ml9iq1wu3/MR-overview.pdf?rlkey=ftt4pqqsene9jb5o3mq6v1o2o&amp;dl=0">Prehľad</a></p></li>
+<li><p><a href="https://www.dropbox.com/scl/fi/2r5hqtyupxj93mfsnviwg/MCMC.pdf?rlkey=p2dmx9vw23apjph7cl7q41osg&amp;dl=0">Markov
+Chain Monte Carlo</a></p></li>
+<li><p><a href="https://www.dropbox.com/scl/fi/82c618b9uj4heahia5ye3/1-2-kapitola-Mikosch_upd.pdf?rlkey=dpq2y90qutuqk8b0qksplxeek&amp;dl=0">Poissonov
+process</a></p></li>
+<li><p><a href="https://www.dropbox.com/scl/fi/ohlugz1iwymg0gkrt4zvu/13-kapitola-Rosenthal.pdf?rlkey=c44ncrvjm3l3j8jeb8s6i2f5f&amp;dl=0">Podmienená
+pravdpodobnosť</a></p></li>
+<li><p><a href="https://www.dropbox.com/scl/fi/pt575ss9k241kvw8xjamm/14-kapitola-Rosenthal.pdf?rlkey=rq372ltp2h9hwjpsn1na1qbo2&amp;dl=0">Martingaly</a></p></li>
+<li><p><a href="https://www.dropbox.com/scl/fi/14cx1oqjevcfd9kfnq8bl/15-kapitola-Rosenthal-cast1.pdf?rlkey=zfdvqhvmihn9161ridrylyv1u&amp;dl=0">Všeobecné
+stochastické procesy</a></p></li>
+<li><p><a href="https://www.dropbox.com/scl/fi/cswojtk1nakup1kaao3e3/15-kapitola-Rosenthal-cast2.pdf?rlkey=e3ugy5dbhgd8kk8c1c9r7ck6n&amp;dl=0">Stochastické
+intergrály</a></p></li>
+</ul>
+</div>
 <div id="odporúčaná-literatúra" class="section level3">
 <h3>Odporúčaná literatúra</h3>
 <p><strong>Povinná</strong><br />
