--- a/_pages/about.html
+++ b/_pages/about.html
@@ -364,7 +364,8 @@ thesis</a> in Economics in 2014. I was appointed to <a href="https://www.muni.cz
 professor of Economics</a> (docent) by <a href="https://www.econ.muni.cz/en">Masaryk University in Brno</a> in
 2024.</p>
 <p>My research interests lie mainly within the areas of econometrics,
-causal inference, partial identification, and labor economics.</p>
+causal inference, and labor economics. I have also experience in working
+with and analyzing medical data for research.</p>
 <p>My CV can be found <a href="https://lukaslaffers.github.io/files/CV_Laffers_eng.pdf">here</a>
 (Dec 2024).</p>
 </div>
