--- a/_pages/stoch.html
+++ b/_pages/stoch.html
@@ -383,8 +383,9 @@ všetky relevantné informácie týkajúce sa tohoto kurzu.</p>
 <li>Passcode: VEX6Mm</li>
 </ul>
 </div>
-<div id="poznámky" class="section level3">
-<h3>Poznámky</h3>
+<div id="súbory" class="section level3">
+<h3>Súbory</h3>
+<p>Poznámky:</p>
 <ul>
 <li><p><a href="https://www.dropbox.com/scl/fi/inf0nn8ex8ar7n1qrnzqf/7-kapitola-Rosenthal-cast1.pdf?rlkey=jkuiosccow0y5x1ml36tw6ytf&amp;dl=0">Stochastické
 procesy</a></p></li>
@@ -402,6 +403,7 @@ stochastické procesy</a></p></li>
 <li><p><a href="https://www.dropbox.com/scl/fi/cswojtk1nakup1kaao3e3/15-kapitola-Rosenthal-cast2.pdf?rlkey=e3ugy5dbhgd8kk8c1c9r7ck6n&amp;dl=0">Stochastické
 intergrály</a></p></li>
 </ul>
+<p>Domáce úlohy: <a href="http://lukaslaffers.github.io/files/1%20exercise_2025.pdf">1</a></p>
 </div>
 <div id="odporúčaná-literatúra" class="section level3">
 <h3>Odporúčaná literatúra</h3>
