--- a/_pages/linreg1.html
+++ b/_pages/linreg1.html
@@ -403,9 +403,9 @@ Prednáška/Cvičenie</li>
 </ul>
 <p><strong>Zoom</strong> (kalendárne týždne 42–43):</p>
 <ul>
-<li>14.10.2025 13:50 – 15:25</li>
+<li>14.10.2025 <del>13:50</del> <span style="color:red"><strong>14:10</strong></span> – 15:25</li>
 <li>15.10.2025 15:25 – 17:40</li>
-<li>21.10.2025 13:50 – 15:25</li>
+<li>21.10.2025 <del>13:50</del> <span style="color:red"><strong>14:10</strong></span> – 15:25</li>
 <li>22.10.2025 15:25 – 17:40</li>
 </ul>
 <p>Prihlasovacie info:</p>
