--- a/_pages/stoch.html
+++ b/_pages/stoch.html
@@ -404,6 +404,9 @@ stochastické procesy</a></p></li>
 intergrály</a></p></li>
 </ul>
 <p>Domáce úlohy: <a href="http://lukaslaffers.github.io/files/1%20exercise_2025.pdf">1</a></p>
+<p>Iné:</p>
+<p>15oct: <a href="https://www.dropbox.com/scl/fi/k8h5otpb5el39h9c59jph/stoch_15oct2025.pdf?rlkey=s3pum3y6menbs9zprevxlq9ro&amp;dl=0">tabuľa</a>,
+<a href="https://youtu.be/Ennt00MpCRI">záznam</a></p>
 </div>
 <div id="odporúčaná-literatúra" class="section level3">
 <h3>Odporúčaná literatúra</h3>
