--- a/_pages/linreg1.html
+++ b/_pages/linreg1.html
@@ -375,7 +375,7 @@ všetky relevantné informácie týkajúce sa tohoto kurzu.</p>
 <p>Slajdy: <a href="https://www.dropbox.com/scl/fi/eansoxj03u6dzn5sniya9/MAR1_1_lecture.pdf?rlkey=u5ocrwdfjzq0ig8hrgquii60k&amp;dl=0">1</a>
 <a href="https://www.dropbox.com/scl/fi/nw4x5rcogdqgk2yi4nc1l/MAR1_2_lecture.pdf?rlkey=8wyo51vbbe5tbzrtz7of7i4g9&amp;dl=0">2</a>
 <a href="https://www.dropbox.com/scl/fi/jeukmwv5xqkq03eurcol1/MAR1_3_lecture.pdf?rlkey=k1j9t5156ll3zezky331er160&amp;dl=0">3</a>
-<a href="https://www.dropbox.com/scl/fi/hkyhgutk3rnkixt068dme/MAR1_4_lecture.pdf?rlkey=szne91huyys6ozn059tfv2liv&amp;dl=0">4</a></p>
+<a href="https://www.dropbox.com/scl/fi/zsvkkcito63zbp240591b/MAR1_4_lecture-2.pdf?rlkey=vt1u1olxxuwkym3y7tgqd2m2y&amp;dl=0">4</a></p>
 <p>R z prednášky: <a href="https://www.dropbox.com/scl/fi/vddxdof05wq9pl5flpecu/1.R?rlkey=sc7gcvxxfzmaxwjredlpypmo3&amp;dl=0">1</a>
 <a href="https://www.dropbox.com/scl/fi/4wzlwuufkqhu6y6ghy55b/2.R?rlkey=sxmblirgxnbd4c9to99nvq554&amp;dl=0">2</a>
 <a href="https://www.dropbox.com/scl/fi/7pwtte44dgcu8lsbrqs7z/3.R?rlkey=pf023bu35arzfe81kd6z8xzf4&amp;dl=0">3</a>
@@ -398,6 +398,8 @@ v N</a>, <a href="https://www.dropbox.com/scl/fi/ishoc8a5povlnw0mflciw/dk2.R?rlk
 to mean simulácia</a></li>
 <li><a href="https://www.dropbox.com/scl/fi/zdngnvf8oferumrdrsv6e/cvic_14Oct.pdf?rlkey=haqxckfeorrz9utn9e4to5gn7&amp;dl=0">Cv
 14oct</a>, <a href="https://www.dropbox.com/scl/fi/sqx6ovipne48hg2qe1ojz/cvicenia14oct2025.R?rlkey=c4y02xllon0luwwjywjnui34k&amp;dl=0">R</a></li>
+<li><a href="https://www.youtube.com/watch?v=YwT0JCvRSaU">Kauzalita z
+neexperimentálnych dát</a></li>
 </ul>
 </div>
 <div id="rozvrh" class="section level3">
