--- a/_pages/linreg1.html
+++ b/_pages/linreg1.html
@@ -386,7 +386,8 @@ všetky relevantné informácie týkajúce sa tohoto kurzu.</p>
 <a href="https://www.dropbox.com/scl/fi/mexljsm2foi8tf52o9pq6/Cv4_LL_2025.R?rlkey=xlvt8ts80i646ix4021bb0yom&amp;dl=0">4</a></p>
 <p>R cvičenia (praktické): <a href="https://www.dropbox.com/scl/fi/dnfbpb2d3aufv7s6wq4a5/Ex1_Tutorial-Vizualizacia.R?rlkey=6n9ecepa0b0cn0u1jorwuwqwj&amp;dl=0">1</a>
 <a href="https://www.dropbox.com/scl/fi/64uert1oipdthmig2kfh4/Ex2_Odhadovanie.R?rlkey=qbs12obgxhipfgrn9b2mzca8y&amp;dl=0">2</a>
-<a href="https://www.dropbox.com/scl/fi/gh2qtvtul8h4ahxgufkjx/Ex3_Inferencia.R?rlkey=jb92xentxwx8jafe2t7jkv18u&amp;dl=0">3</a></p>
+<a href="https://www.dropbox.com/scl/fi/gh2qtvtul8h4ahxgufkjx/Ex3_Inferencia.R?rlkey=jb92xentxwx8jafe2t7jkv18u&amp;dl=0">3</a>
+<a href="https://www.dropbox.com/scl/fi/a9s9hkta7x8t3f08s07cg/Ex4_PredVysvetl.R?rlkey=vospw1yv2kj59z5vsgwsagbrc&amp;dl=0">4</a></p>
 <p>Domáce úlohy: <a href="https://www.dropbox.com/scl/fi/rc3ccksvvyd0jnoiycrmh/2025_DU1.pdf?rlkey=3pr7h2tv2jqc2vlnbl74qv9bg&amp;dl=0">1</a>
 <a href="https://www.dropbox.com/scl/fi/q90j2mnzuvxyqdlo3vzuf/2025_DU2.pdf?rlkey=g1jehv536yaw7nit7mbsmczvq&amp;dl=0">2</a></p>
 <p>Misc:</p>
