--- a/_pages/stoch.html
+++ b/_pages/stoch.html
@@ -403,10 +403,13 @@ stochastické procesy</a></p></li>
 <li><p><a href="https://www.dropbox.com/scl/fi/cswojtk1nakup1kaao3e3/15-kapitola-Rosenthal-cast2.pdf?rlkey=e3ugy5dbhgd8kk8c1c9r7ck6n&amp;dl=0">Stochastické
 intergrály</a></p></li>
 </ul>
-<p>Domáce úlohy: <a href="http://lukaslaffers.github.io/files/1%20exercise_2025.pdf">1</a></p>
+<p>Domáce úlohy: <a href="http://lukaslaffers.github.io/files/1%20exercise_2025.pdf">1</a>
+<a href="http://lukaslaffers.github.io/files/2%20exercise_2025.pdf">2</a></p>
 <p>Iné:</p>
 <p>15oct: <a href="https://www.dropbox.com/scl/fi/k8h5otpb5el39h9c59jph/stoch_15oct2025.pdf?rlkey=s3pum3y6menbs9zprevxlq9ro&amp;dl=0">tabuľa</a>,
 <a href="https://youtu.be/Ennt00MpCRI">záznam</a></p>
+<p>22oct: <a href="https://www.dropbox.com/scl/fi/cw3fxo7zfb51o7gcbgogg/stoch_22oct2025.pdf?rlkey=jowelr25rseujots4kxcs4vrm&amp;dl=0">tabuľa</a>,
+<a href="https://youtu.be/ta28Pl55RaE">záznam</a></p>
 </div>
 <div id="odporúčaná-literatúra" class="section level3">
 <h3>Odporúčaná literatúra</h3>
