--- a/_pages/research.html
+++ b/_pages/research.html
@@ -377,7 +377,8 @@ WP</a>)</li>
 <li>Causal Mechanisms of Relative Age Effects on Adolescent Risky
 Behaviours (with <a href="https://sites.google.com/site/lucafumarco/home">Luca Fumarco</a>
 and <a href="https://sites.google.com/view/principefrancesco/">Francesco
-Principe</a>)</li>
+Principe</a>, <a href="https://edworkingpapers.com/ai24-1088">Ed
+WP</a>)</li>
 <li>Correcting for Nonignorable Nonresponse Bias in Ordinal
 Observational Survey Data (with <a href="https://jozefmichalmintal.com">Jozef Michal Mintal</a> and Ivan
 Sutoris, <a href="http://lukaslaffers.github.io/files/presentation_LL_SEAM.pdf">slides</a>)</li>
