--- a/_pages/misc.html
+++ b/_pages/misc.html
@@ -356,6 +356,9 @@ display: none;
 <h1>Misc</h1>
 <ul>
 <li>Our department - Web: <a href="https://www.umbmath.sk">www.umbmath.sk</a>, Facebook: <a href="https://www.facebook.com/UMBmath"><span class="citation">@UMBmath</span></a>, Instagram: <a href="https://www.instagram.com/umbmath/">#UMBmath</a></li>
+<li><span class="math display">\[in Slovak\]</span> rozhovor v Rádiu
+Slovensko: <a href="https://slovensko.stvr.sk/rubriky/aktualne-rubriky/doma-je-doma/398660/doma-je-doma-lukas-laffers">Doma
+je doma</a></li>
 </ul>
 </div>
 <div id="in-slovak-popularizačné-prednášky" class="section level1">
@@ -367,7 +370,7 @@ prednášky</h1>
 <li>Stratení v náhodnom lese. Príbeh o jednom machine-learningovom
 algoritme (2024, <a href="https://lukaslaffers.github.io/files/DOD_2024b.pdf">slides</a>)</li>
 <li>Štatistické paradoxy okolo nás (2024, <a href="https://lukaslaffers.github.io/files/DOD_2024_upd.pdf">slides</a>)</li>
-<li>Príprava na <a href="https://esc2024.statistics.sk">ESC</a> (<a href="https://www.dropbox.com/scl/fi/wnw2fmhdoj1oqw6d32mel/ESC_2024.pdf?rlkey=oi5zm2f883bq4pmnvx7yuat5r&amp;dl=0">2024
+<li>Príprava na <a href="https://esc2024.statistics.sk">ESC</a> (<a href="https://lukaslaffers.github.io/files/ESC_2024.pdf">2024
 slides</a>, <a href="https://lukaslaffers.github.io/files/ESCupd15dec.pdf">2023
 lides</a>)</li>
 <li>Prečo študovať matematiku (2023, <a href="https://www.youtube.com/watch?list=PL-MRd_-k_6x3YIFTVIUxDJlMTnhaWcldw&amp;v=quZoaCJgID0">video</a>,
