--- a/_pages/linreg1.html
+++ b/_pages/linreg1.html
@@ -414,6 +414,11 @@ neexperimentálnych dát</a></li>
 parametrov</a></li>
 </ul>
 </div>
+<div id="odovzdávadlo" class="section level3">
+<h3>Odovzdávadlo</h3>
+<p><a href="https://umbsk-my.sharepoint.com/:f:/g/personal/llaffers_umb_sk/EhjNFmfux21DrYwf8Px5L_MBlGnYGQXH_fPmmFsdsbbuQA">R
+súbor nahrajte sem</a></p>
+</div>
 <div id="rozvrh" class="section level3">
 <h3>Rozvrh</h3>
 <p>13 týždňov (16. september – 10. december, kalendárne týždne
