--- a/_pages/linreg1.html
+++ b/_pages/linreg1.html
@@ -416,8 +416,8 @@ parametrov</a></li>
 </div>
 <div id="odovzdávadlo" class="section level3">
 <h3>Odovzdávadlo</h3>
-<p><a href="https://umbsk-my.sharepoint.com/:f:/g/personal/llaffers_umb_sk/EhjNFmfux21DrYwf8Px5L_MBlGnYGQXH_fPmmFsdsbbuQA">R
-súbor nahrajte sem</a></p>
+<p><a href="https://www.dropbox.com/request/utFWgckwkb9rpuwzAcaA">R
+subor nahrajte sem</a> ak to nepôjde, tak <a href="https://umbsk-my.sharepoint.com/:f:/g/personal/llaffers_umb_sk/EhjNFmfux21DrYwf8Px5L_MBlGnYGQXH_fPmmFsdsbbuQA">sem</a></p>
 </div>
 <div id="rozvrh" class="section level3">
 <h3>Rozvrh</h3>
